tests/error/type_match/base_case_pointer_const_propagation2.bz
// error: unable to match value of type 'mut *mut *mut i32' to '*mut *i32'
// note: mismatched mutability of types 'mut i32' and 'i32'
function test()
{
	mut i = 0;
	mut pi: *mut i32 = &i;
	mut ppi: *mut *mut i32 = &pi;
	let _: *mut *i32 = ppi;
}
